fix: Removed overflow on body

--- a/src/assets/CatList.css
+++ b/src/assets/CatList.css
@@ -1,6 +1,8 @@
 .cat-container {
     display: grid;
     grid-template-columns: repeat(3, auto [col-start]);
+    justify-items: center;
+    align-items: center;
 }
 
 .cat {
